# -ContraintIQ

./: .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  app.js  index.html  render.yaml  styles.css  vercel.json
backend/: conftest.py  main.py  requirements.txt
frontend/: app.js  config.js  index.html  pyproject.toml  styles.css
frontend/.hypothesis/constants/: 031c0fbdb8bac455  1fc44b452911a870  22337829e5c4b6e0  33a5c37d1a7d2d56  4cc8fa7f2dfff075  4e803c290219c172  5f5a8ca4d6b4527d  69357c83ae1da432  69fac27782eda68f  8135ee58782818b8  8a84e99e9081f16b  99eca230d59bdd2a  9ecfad7142447a00  b1e6c7d7174648d7  be9a21bad94fbfb5  cbe142bb770d7673  cdbae733610de781  de37fe77e27ddf7b  fbaa03e00f1d97f5  fd8d5fcdc81d6c75
frontend/src/engineering_drawing_analyzer/: ingestion.py  pipeline.py  report_generator.py  serializer.py
frontend/src/engineering_drawing_analyzer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
frontend/src/engineering_drawing_analyzer/parsers/: __init__.py  dxf_parser.py  pdf_parser.py
frontend/src/engineering_drawing_analyzer/rule_engine/: __init__.py  engine.py  manufacturing_readiness.py
frontend/src/engineering_drawing_analyzer/templates/: report.html.j2
frontend/tests/: test_performance.py
frontend/tests/fixtures/labeled_mechanical/: plate_drawing.json
frontend/tests/integration/: test_pipeline.py
frontend/tests/property/: test_issue_severity.py  test_round_trip.py
frontend/tests/unit/: test_dwg_parser.py  test_rule_dimension_completeness.py  test_rule_manufacturing_readiness.py  test_serializer.py  test_symbol_detector.py
(+530 files in other folders)
