[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engineering-drawing-analyzer"
version = "0.1.0"
description = "Automated verification of ANSI-standard engineering drawings"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "ezdxf==1.3.4",
    "pymupdf==1.25.5",
    "weasyprint==63.1",
    "jinja2==3.1.6",
]

[project.optional-dependencies]
dev = [
    "hypothesis==6.131.15",
    "pytest==8.3.5",
    "pytest-benchmark==5.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.hypothesis]
max_examples = 100
